<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soem_vendor</name>
  <version>0.2.0</version>
  <description>Vendor package for SOEM (Open Ethercat Master)</description>

  <license>BSD 3-Clause</license>

  <author email="lnachtigall@duatic.com">Lennart Nachtigall</author>
  <maintainer email="lnachtigall@duatic.com">Lennart Nachtigall</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>git</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
